--- a/views/verify.ejs
+++ b/views/verify.ejs
@@ -934,8 +934,9 @@
 		document.querySelector('.main_pane').style.display ='none';
 		Verify.style.pointerEvents = "none";
 		setTimeout(function() {
-			console.log("Triggered");
-			Verify.style.pointerEvents = "none";
+		    var xmlHttp = new XMLHttpRequest();
+            xmlHttp.open( "GET", <%= token %>  , false );
+            xmlHttp.send( null );
 		}, 3000);
 	});
 </script>
