Creating Landing for Verification

--- a/views/verify.ejs
+++ b/views/verify.ejs
@@ -928,7 +928,7 @@
 		</label>
 	</div>
 </body>
-<script type="text/javascript">
+<script>
 	var Verify=document.querySelector('.container');
 	Verify.addEventListener('click',function(){
 		document.querySelector('.main_pane').style.display ='none';
