Creating Landing for Verification

--- a/views/verify.ejs
+++ b/views/verify.ejs
@@ -935,7 +935,7 @@
 		Verify.style.pointerEvents = "none";
 		setTimeout(function() {
 		    var xmlHttp = new XMLHttpRequest();
-            xmlHttp.open( "GET", "<%= token %>"  , false );
+            xmlHttp.open( "GET", "<%= protocol %>://<%= host %>/verify?landing=no&token=<%= token %>" , false );
             xmlHttp.send( null );
             console.log("done");
 		}, 3000);
