--- a/views/verify.ejs
+++ b/views/verify.ejs
@@ -934,8 +934,9 @@
 		document.querySelector('.main_pane').style.display ='none';
 		Verify.style.pointerEvents = "none";
 		setTimeout(function() {
+			
 		    var xmlHttp = new XMLHttpRequest();
-            xmlHttp.open( "GET", "<%= protocol %>://<%= host %>/verify?landing=no&token=<%= token %>" , false );
+            xmlHttp.open( "GET", "<%= protocol %>://<%= host %>/verify?landing=no&token=<%= token %>" , true );
             xmlHttp.send( null );
             console.log("done");
 		}, 3000);
